# user-account-access-graph

./: .gitignore  CHANGELOG.md  Main.hs  PSPK Präsentation.md  README.md  UserAccountAccessGraph.cabal  compose.yaml  run.sh
app/: AccountAccessGraph.hs  CommandHandler.hs  Graphviz.hs  Levels.hs  Main.hs  Mermaid.hs  RESTController.hs  Utils.hs
backend/: Dockerfile  README.md  UserAccountAccessGraph.cabal
backend/src/: AccountAccessGraph.hs  CommandHandler.hs  Graphviz.hs  Main.hs  Postgres.hs  RESTController.hs
db/: init.sql
persistence/: level2.aag
