cabal-version:      3.0
name:               UserAccountAccessGraph
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Urs Kahmann & Niklas Schröder
maintainer:         33390735+lnschroeder@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable UserAccountAccessGraph
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        AccountAccessGraph
        Graphviz

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
