cabal-version:      3.0
name:               UserAccountAccessGraph
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             Urs Kahmann & Niklas Schröder
maintainer:         33390735+lnschroeder@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

executable UserAccountAccessGraph
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    AccountAccessGraph
    CommandHandler
    Graphviz

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                ^>=4.16.4.0
    , containers          ^>=0.6.7
    , directory           ^>=1.3.6.2
    , split               ^>=0.2.3.5
    , text-format-simple  ^>=1.1.0

  hs-source-dirs:   app
  default-language: Haskell2010
