cabal-version:      3.0
name:               UserAccountAccessGraph
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:
author:             Niklas Schröder & Urs Kahmann
maintainer:         33390735+lnschroeder@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

executable UserAccountAccessGraph
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    AccountAccessGraph
    CommandHandler
    Graphviz
    RESTController
    Utils

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson               ^>=2.2.1.0
    , base                ^>=4.17.2.0
    , containers          ^>=0.6.7
    , directory           ^>=1.3.6.2
    , http-types          ^>=0.12.3
    , scotty              ^>=0.20.1
    , split               ^>=0.2.3.5
    , text-format-simple  ^>=1.1.0

  hs-source-dirs:   src
  default-language: Haskell2010
